[package]
name = "abrahm"
version = "0.1.0"
authors = ["dkf <dannzor@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.0"
themis = "0.13.0"
hex = "0.4.2"
rocksdb = "0.15.0"
rust-crypto = "^0.2"
serial_test = "*"
libp2p = "0.39.1"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.1"
tokio-test = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
futures = "0.3"
async-std = { version = "1.6.2", features = ["attributes"] }
smallvec = "1.0"
void = "1"
warp = "0.3.1"
uuid = { version = "0.4", features = ["serde", "v4"] }
reqwest = { version = "0.11.3", features = ["json"] }
actix-rt = "2.2.0"
mio = { version = "0.7", features = ["os-poll", "net"] }
rand = "0.8.0"
