[package]
description = "AbrahmChain"
name = "abrahmchain"
version = "0.1.0"
authors = ["dkf <dannzor@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
themis = "0.14.0"
clap = "2.27.0"
log = "0.4"
serial_test = "0.5.1"

consensus = { path = "consensus" }
ledger = { path = "ledger" }
network = { path = "network" }
types = { path = "types" }
swiss_knife = { path = "swiss_knife" }

[lib]
path = "bin/lib.rs"

[[bin]]
path = "bin/main.rs"
name = "abrahmchain"

[profile.release]
debug = true

[profile.bench]
debug = true
