[package]
name = "consensus"
version = "0.1.0"
authors = ["dkf <dannzor@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.1"
tokio-test = "0.4.1"
themis = "0.14.0"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
log = "0.4"
hex = "0.4.2"
serial_test = "0.5.1"

swiss_knife = { path = "../swiss_knife" }
types = { path = "../types" }

[features]
default = []
