[package]
name = "ledger"
version = "0.1.0"
authors = ["dkf <dannzor@outlook.com>"]
edition = "2018"

[dependencies]
themis = "0.13.0"
tokio-test = "0.4.1"
serial_test = "0.5.1"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.15.0"
log = "0.4"
hex = "0.4.2"

swiss_knife = { path = "../swiss_knife" }

[features]
default = []
