[package]
name = "network"
version = "0.1.0"
authors = ["dkf <dannzor@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.1"
tokio-test = "0.4.1"
libp2p = "0.39.1"
themis = "0.14.0"
hex = "0.4.2"
bendy = "0.3"
rust-crypto = "^0.2"
log = "0.4"
rand = "0.8.0"
serde_json = "1.0"

swiss_knife = { path = "../swiss_knife" }
consensus = { path = "../consensus" }

[features]
default = []
